guestbook/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-vs
  namespace: maher-bforbank-istio
spec:
  hosts:
  - "*"
  gateways:
  - guestbook-gateway
  http:
  - name: "main-app-route"
    match:
    - uri:
        prefix: "/maher-bforbank-istio/guestbook"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: guestbook-ui # No subset here for the final state
  - name: "css-assets-fix"
    match:
    - uri:
        prefix: "/maher-bforbank-istio/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: guestbook-ui # No subset here for the final state
